Add functionalities like update the field moyenne on each change (adding or deleting a field)

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
         <div name="divNote" class="form-field single-line">
             <label for="note1">Note 1 :</label>
             <input type="number" name="note[]" id="note1">
-            <button type="button" id="ajouterNote" >+</button>
-            
-            
+            <button type="button" id="ajouterNote">+</button>
         </div>
         <!-- pour que le message d'erreur s'affiche ici -->
         <span id="adderror"></span>
@@ -56,7 +54,7 @@
         </div>
 
         <div class="form-field single-line">
-            <input type="submit" value="Calculer la moyenne">
+            <input type="submit" value="Inscrire">
         </div>
     </form>
 
