updated almost done
j'ai ajouté tous les fonctionalités mais il faut (clean of code)

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 <td>[13, 16, 8]</td>
                 <td>12.3</td>
                 <td>
-                    <button class="modifier" onclick="modifierEtudiant(this)">Modifier</button> <!-- Bouton Modifier -->
-                    <button class="supprimer" onclick="supprimerEtudiant(this)">Supprimer</button> <!-- Bouton Supprimer -->
+                    <button class="modifier" >Modifier</button> <!-- Bouton Modifier -->
+                    <button class="supprimer">Supprimer</button> <!-- Bouton Supprimer -->
                 </td>
             </tr>
             
